# -Smart-Lead-Enrichment-Scoring-Scraper

./: README.md
backend/: .env  .env.example  app.py  enrichment.py  pyproject.toml  requirements.txt  scorer.py  scraper.py
frontend/: app.js  index.html  styles.css
