[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "pandas>=3.0.2",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
